test/error/block_comment_eof.sv
// pattern: Reached EOF while looking for: "\*/"
/*
